Changed roll construction, adjusted names and various other things.

--- a/tests/parsing/scripts/bags.yaml
+++ b/tests/parsing/scripts/bags.yaml
@@ -11,6 +11,18 @@ tests:
     result:
       _class: NewBag
       value: []
+  - script: '{ :}'
+    result:
+      _class: NewBag
+      value: []
+  - script: '{: }'
+    result:
+      _class: NewBag
+      value: []
+  - script: '{ : }'
+    result:
+      _class: NewBag
+      value: []
   - script: '{: :}'
     result:
       _class: NewBag
