--- a/tests/evaluation/scripts/expressions.yaml
+++ b/tests/evaluation/scripts/expressions.yaml
@@ -125,3 +125,35 @@ tests:
     - ['[:6<-> {1d6} - 1, 6, 7:]', [0, 1, 2, 3, 4, 5, 6, 7]]
   - statements:
     - ['[:0, 6 <->{1d6},7:]', [0, [1], [2], [3], [4], [5], [6], 7]]
+  - statements:
+    - ['a = [:]', null]
+    - ['a', []]
+    - ['a & 1', [1]]
+    - ['a', []]
+  - statements:
+    - ['b = [: 1, 2:]', null]
+    - ['b', [1, 2]]
+    - ['b & 1', [1, 2, 1]]
+    - ['b', [1, 2]]
+  - statements:
+    - ['c = [: 1, 2:]', null]
+    - ['c', [1, 2]]
+    - ['1 & c', [1, 1, 2]]
+    - ['c', [1, 2]]
+  - statements:
+    - ['d = [: 1, 2:]', null]
+    - ['d', [1, 2]]
+    - ['d & d', [1, 2, [1, 2]]]
+    - ['d & d.{*}', [1, 2, 1, 2]]
+  - statements:
+    - ['e = [: 1, 2:]', null]
+    - ['e', [1, 2]]
+    - ['z = [: 3, 4:]', null]
+    - ['z', [3, 4]]
+    - ['e & e', [1, 2, [1, 2]]]
+    - ['z & e', [3, 4, [1, 2]]]
+    - ['e & e.{*}', [1, 2, 1, 2]]
+    - ['z & e.{*}', [3, 4, 1, 2]]
+    - ['e &= z.{*}', null]
+    - ['e', [1, 2, 3, 4]]
+    - ['z', [3, 4]]
