--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-ame = rollit
+name = rollit
 version = 0.0.1
 description = An intensely pointless programming language based off of dice notation.
 url = https://github.com/russels-crockpot/rollit
@@ -19,7 +19,8 @@ project_urls =
     Source Code = https://github.com/russels-crockpot/rollit
 
 [options]
-package_dir = src
+package_dir =
+    =src
 packages = find:
 python_requires = >=3.7
 tests_requires =
@@ -28,7 +29,11 @@ tests_requires =
 [options.packages.find]
 where=src
 
-[options.extra_requires]
+[options.entry_points]
+console_scripts =
+    rollit = rollit
+
+[options.extras_require]
 pretty-repl =
     pygments
     appdirs
@@ -95,7 +100,7 @@ use_tabs = false
 project = rollit
 version = 0.0.1
 release = 0.0.1
-source-dir = doc
+source-dir = docs
 builder =
     spelling
     html
